src/libbulletc/src/btSoftBody_wrap.h



	EXPORT btSoftBody_RContact* btSoftBody_RContact_new();

	EXPORT void btSoftBody_RContact_getC0(btSoftBody_RContact* obj);

	EXPORT void btSoftBody_RContact_getC1(btSoftBody_RContact* obj);

	EXPORT btScalar btSoftBody_RContact_getC2(btSoftBody_RContact* obj);

	EXPORT btScalar btSoftBody_RContact_getC3(btSoftBody_RContact* obj);

	EXPORT btScalar btSoftBody_RContact_getC4(btSoftBody_RContact* obj);

	EXPORT void btSoftBody_RContact_getCti(btSoftBody_RContact* obj);

	EXPORT btSoftBody_Node* btSoftBody_RContact_getNode(btSoftBody_RContact* obj);

	//EXPORT void btSoftBody_RContact_setC0(btSoftBody_RContact* obj, void value);
	//EXPORT void btSoftBody_RContact_setC1(btSoftBody_RContact* obj, void value);
	EXPORT void btSoftBody_RContact_setC2(btSoftBody_RContact* obj, btScalar value);

	EXPORT void btSoftBody_RContact_setC3(btSoftBody_RContact* obj, btScalar value);

	EXPORT void btSoftBody_RContact_setC4(btSoftBody_RContact* obj, btScalar value);

	//EXPORT void btSoftBody_RContact_setCti(btSoftBody_RContact* obj, void value);
	EXPORT void btSoftBody_RContact_setNode(btSoftBody_RContact* obj, btSoftBody_Node* value);

	EXPORT void btSoftBody_RContact_delete(btSoftBody_RContact* obj);


	EXPORT btSoftBody_SContact* btSoftBody_SContact_new();

	EXPORT btScalar* btSoftBody_SContact_getCfm(btSoftBody_SContact* obj);

	EXPORT btSoftBody_Face* btSoftBody_SContact_getFace(btSoftBody_SContact* obj);

	EXPORT btScalar btSoftBody_SContact_getFriction(btSoftBody_SContact* obj);

	EXPORT btScalar btSoftBody_SContact_getMargin(btSoftBody_SContact* obj);

	EXPORT btSoftBody_Node* btSoftBody_SContact_getNode(btSoftBody_SContact* obj);

	EXPORT void btSoftBody_SContact_getNormal(btSoftBody_SContact* obj);

	EXPORT void btSoftBody_SContact_getWeights(btSoftBody_SContact* obj);

	EXPORT void btSoftBody_SContact_setCfm(btSoftBody_SContact* obj, btScalar* value);

	EXPORT void btSoftBody_SContact_setFace(btSoftBody_SContact* obj, btSoftBody_Face* value);

	EXPORT void btSoftBody_SContact_setFriction(btSoftBody_SContact* obj, btScalar value);

	EXPORT void btSoftBody_SContact_setMargin(btSoftBody_SContact* obj, btScalar value);

	EXPORT void btSoftBody_SContact_setNode(btSoftBody_SContact* obj, btSoftBody_Node* value);

	//EXPORT void btSoftBody_SContact_setNormal(btSoftBody_SContact* obj, void value);
	//EXPORT void btSoftBody_SContact_setWeights(btSoftBody_SContact* obj, void value);
	EXPORT void btSoftBody_SContact_delete(btSoftBody_SContact* obj);


	EXPORT btSoftBody_Anchor* btSoftBody_Anchor_new();

	EXPORT btRigidBody* btSoftBody_Anchor_getBody(btSoftBody_Anchor* obj);

	EXPORT void btSoftBody_Anchor_getC0(btSoftBody_Anchor* obj);

	EXPORT void btSoftBody_Anchor_getC1(btSoftBody_Anchor* obj);

	EXPORT btScalar btSoftBody_Anchor_getC2(btSoftBody_Anchor* obj);

	EXPORT btScalar btSoftBody_Anchor_getInfluence(btSoftBody_Anchor* obj);

	EXPORT void btSoftBody_Anchor_getLocal(btSoftBody_Anchor* obj);

	EXPORT btSoftBody_Node* btSoftBody_Anchor_getNode(btSoftBody_Anchor* obj);

	EXPORT void btSoftBody_Anchor_setBody(btSoftBody_Anchor* obj, btRigidBody* value);

	//EXPORT void btSoftBody_Anchor_setC0(btSoftBody_Anchor* obj, void value);
	//EXPORT void btSoftBody_Anchor_setC1(btSoftBody_Anchor* obj, void value);
	EXPORT void btSoftBody_Anchor_setC2(btSoftBody_Anchor* obj, btScalar value);

	EXPORT void btSoftBody_Anchor_setInfluence(btSoftBody_Anchor* obj, btScalar value);

	//EXPORT void btSoftBody_Anchor_setLocal(btSoftBody_Anchor* obj, void value);
	EXPORT void btSoftBody_Anchor_setNode(btSoftBody_Anchor* obj, btSoftBody_Node* value);

	EXPORT void btSoftBody_Anchor_delete(btSoftBody_Anchor* obj);


	EXPORT btSoftBody_Note* btSoftBody_Note_new();

	EXPORT btScalar* btSoftBody_Note_getCoords(btSoftBody_Note* obj);

	//EXPORT * btSoftBody_Note_getNodes(btSoftBody_Note* obj);
	EXPORT void btSoftBody_Note_getOffset(btSoftBody_Note* obj);

	EXPORT int btSoftBody_Note_getRank(btSoftBody_Note* obj);

	EXPORT const char* btSoftBody_Note_getText(btSoftBody_Note* obj);

	EXPORT void btSoftBody_Note_setCoords(btSoftBody_Note* obj, btScalar* value);

	//EXPORT void btSoftBody_Note_setNodes(btSoftBody_Note* obj, * value);
	//EXPORT void btSoftBody_Note_setOffset(btSoftBody_Note* obj, void value);
	EXPORT void btSoftBody_Note_setRank(btSoftBody_Note* obj, int value);

	EXPORT void btSoftBody_Note_setText(btSoftBody_Note* obj, char* value);