src/BulletSharpPInvoke/SoftBody/SoftBody.cs


		[DllImport(Native.Dll, CallingConvention = Native.Conv), SuppressUnmanagedCodeSecurity]
		static extern IntPtr btSoftBody_RContact_new();
		[DllImport(Native.Dll, CallingConvention = Native.Conv), SuppressUnmanagedCodeSecurity]
		static extern void btSoftBody_RContact_getC0(IntPtr obj);
		[DllImport(Native.Dll, CallingConvention = Native.Conv), SuppressUnmanagedCodeSecurity]
		static extern void btSoftBody_RContact_getC1(IntPtr obj);
		[DllImport(Native.Dll, CallingConvention = Native.Conv), SuppressUnmanagedCodeSecurity]
		static extern float btSoftBody_RContact_getC2(IntPtr obj);
		[DllImport(Native.Dll, CallingConvention = Native.Conv), SuppressUnmanagedCodeSecurity]
		static extern float btSoftBody_RContact_getC3(IntPtr obj);
		[DllImport(Native.Dll, CallingConvention = Native.Conv), SuppressUnmanagedCodeSecurity]
		static extern float btSoftBody_RContact_getC4(IntPtr obj);
		[DllImport(Native.Dll, CallingConvention = Native.Conv), SuppressUnmanagedCodeSecurity]
		static extern void btSoftBody_RContact_getCti(IntPtr obj);
		[DllImport(Native.Dll, CallingConvention = Native.Conv), SuppressUnmanagedCodeSecurity]
		static extern IntPtr btSoftBody_RContact_getNode(IntPtr obj);
		[DllImport(Native.Dll, CallingConvention = Native.Conv), SuppressUnmanagedCodeSecurity]
		static extern void btSoftBody_RContact_setC0(IntPtr obj, [In] ref Matrix value);
		[DllImport(Native.Dll, CallingConvention = Native.Conv), SuppressUnmanagedCodeSecurity]
        static extern void btSoftBody_RContact_setC1(IntPtr obj, [In] ref Vector3 value);
		[DllImport(Native.Dll, CallingConvention = Native.Conv), SuppressUnmanagedCodeSecurity]
		static extern void btSoftBody_RContact_setC2(IntPtr obj, float value);
		[DllImport(Native.Dll, CallingConvention = Native.Conv), SuppressUnmanagedCodeSecurity]
		static extern void btSoftBody_RContact_setC3(IntPtr obj, float value);
		[DllImport(Native.Dll, CallingConvention = Native.Conv), SuppressUnmanagedCodeSecurity]
		static extern void btSoftBody_RContact_setC4(IntPtr obj, float value);
		[DllImport(Native.Dll, CallingConvention = Native.Conv), SuppressUnmanagedCodeSecurity]
		static extern void btSoftBody_RContact_setCti(IntPtr obj, sCti value);
		[DllImport(Native.Dll, CallingConvention = Native.Conv), SuppressUnmanagedCodeSecurity]
		static extern void btSoftBody_RContact_setNode(IntPtr obj, IntPtr value);
		[DllImport(Native.Dll, CallingConvention = Native.Conv), SuppressUnmanagedCodeSecurity]
		static extern void btSoftBody_RContact_delete(IntPtr obj);
	}

	public class SContact
	{
		internal IntPtr _native;

		internal SContact(IntPtr native)
		{
			_native = native;
		}

		public SContact()
		{
			_native = btSoftBody_SContact_new();
		}
        /*
		public float Cfm
		{
			get { return btSoftBody_SContact_getCfm(_native); }
			set { btSoftBody_SContact_setCfm(_native, value._native); }
		}
        */
		public Face Face
		{
			get { return new Face(btSoftBody_SContact_getFace(_native)); }
			set { btSoftBody_SContact_setFace(_native, value._native); }
		}

		public float Friction
		{
			get { return btSoftBody_SContact_getFriction(_native); }
			set { btSoftBody_SContact_setFriction(_native, value); }
		}

		public float Margin
		{
			get { return btSoftBody_SContact_getMargin(_native); }
			set { btSoftBody_SContact_setMargin(_native, value); }
		}

		public Node Node
		{
			get { return new Node(btSoftBody_SContact_getNode(_native)); }
			set { btSoftBody_SContact_setNode(_native, value._native); }
		}
        /*
		public void Normal
		{
			get { return btSoftBody_SContact_getNormal(_native); }
			set { btSoftBody_SContact_setNormal(_native, value._native); }
		}

		public void Weights
		{
			get { return btSoftBody_SContact_getWeights(_native); }
			set { btSoftBody_SContact_setWeights(_native, value._native); }
		}
        */
		public void Dispose()
		{
			Dispose(true);
			GC.SuppressFinalize(this);
		}

		protected virtual void Dispose(bool disposing)
		{
			if (_native != IntPtr.Zero)
			{
				btSoftBody_SContact_delete(_native);
				_native = IntPtr.Zero;
			}
		}

		~SContact()
		{
			Dispose(false);
		}

		[DllImport(Native.Dll, CallingConvention = Native.Conv), SuppressUnmanagedCodeSecurity]
		static extern IntPtr btSoftBody_SContact_new();
		[DllImport(Native.Dll, CallingConvention = Native.Conv), SuppressUnmanagedCodeSecurity]
		static extern IntPtr btSoftBody_SContact_getCfm(IntPtr obj);
		[DllImport(Native.Dll, CallingConvention = Native.Conv), SuppressUnmanagedCodeSecurity]
		static extern IntPtr btSoftBody_SContact_getFace(IntPtr obj);
		[DllImport(Native.Dll, CallingConvention = Native.Conv), SuppressUnmanagedCodeSecurity]
		static extern float btSoftBody_SContact_getFriction(IntPtr obj);
		[DllImport(Native.Dll, CallingConvention = Native.Conv), SuppressUnmanagedCodeSecurity]
		static extern float btSoftBody_SContact_getMargin(IntPtr obj);
		[DllImport(Native.Dll, CallingConvention = Native.Conv), SuppressUnmanagedCodeSecurity]
		static extern IntPtr btSoftBody_SContact_getNode(IntPtr obj);
		[DllImport(Native.Dll, CallingConvention = Native.Conv), SuppressUnmanagedCodeSecurity]
		static extern void btSoftBody_SContact_getNormal(IntPtr obj);
		[DllImport(Native.Dll, CallingConvention = Native.Conv), SuppressUnmanagedCodeSecurity]
		static extern void btSoftBody_SContact_getWeights(IntPtr obj);
		[DllImport(Native.Dll, CallingConvention = Native.Conv), SuppressUnmanagedCodeSecurity]
		static extern void btSoftBody_SContact_setCfm(IntPtr obj, IntPtr value);
		[DllImport(Native.Dll, CallingConvention = Native.Conv), SuppressUnmanagedCodeSecurity]
		static extern void btSoftBody_SContact_setFace(IntPtr obj, IntPtr value);
		[DllImport(Native.Dll, CallingConvention = Native.Conv), SuppressUnmanagedCodeSecurity]
		static extern void btSoftBody_SContact_setFriction(IntPtr obj, float value);
		[DllImport(Native.Dll, CallingConvention = Native.Conv), SuppressUnmanagedCodeSecurity]
		static extern void btSoftBody_SContact_setMargin(IntPtr obj, float value);
		[DllImport(Native.Dll, CallingConvention = Native.Conv), SuppressUnmanagedCodeSecurity]
		static extern void btSoftBody_SContact_setNode(IntPtr obj, IntPtr value);
		[DllImport(Native.Dll, CallingConvention = Native.Conv), SuppressUnmanagedCodeSecurity]
		static extern void btSoftBody_SContact_setNormal(IntPtr obj, Vector3 value);
		[DllImport(Native.Dll, CallingConvention = Native.Conv), SuppressUnmanagedCodeSecurity]
		static extern void btSoftBody_SContact_setWeights(IntPtr obj, Vector3 value);
		[DllImport(Native.Dll, CallingConvention = Native.Conv), SuppressUnmanagedCodeSecurity]
		static extern void btSoftBody_SContact_delete(IntPtr obj);
	}

	public class Anchor
	{
		internal IntPtr _native;

		internal Anchor(IntPtr native)
		{
			_native = native;
		}

		public Anchor()
		{
			_native = btSoftBody_Anchor_new();
		}

		public RigidBody Body
		{
			get { return CollisionObject.GetManaged(btSoftBody_Anchor_getBody(_native)) as RigidBody; }
			set { btSoftBody_Anchor_setBody(_native, value._native); }
		}
        /*
		public void C0
		{
			get { return btSoftBody_Anchor_getC0(_native); }
			set { btSoftBody_Anchor_setC0(_native, value._native); }
		}

		public void C1
		{
			get { return btSoftBody_Anchor_getC1(_native); }
			set { btSoftBody_Anchor_setC1(_native, value._native); }
		}
        */
		public float C2
		{
			get { return btSoftBody_Anchor_getC2(_native); }
			set { btSoftBody_Anchor_setC2(_native, value); }
		}

		public float Influence
		{
			get { return btSoftBody_Anchor_getInfluence(_native); }
			set { btSoftBody_Anchor_setInfluence(_native, value); }
		}
        /*
		public void Local
		{
			get { return btSoftBody_Anchor_getLocal(_native); }
			set { btSoftBody_Anchor_setLocal(_native, value._native); }
		}
        */
		public Node Node
		{
			get { return new Node(btSoftBody_Anchor_getNode(_native)); }
			set { btSoftBody_Anchor_setNode(_native, value._native); }
		}

		public void Dispose()
		{
			Dispose(true);
			GC.SuppressFinalize(this);
		}

		protected virtual void Dispose(bool disposing)
		{
			if (_native != IntPtr.Zero)
			{
				btSoftBody_Anchor_delete(_native);
				_native = IntPtr.Zero;
			}
		}

		~Anchor()
		{
			Dispose(false);
		}

		[DllImport(Native.Dll, CallingConvention = Native.Conv), SuppressUnmanagedCodeSecurity]
		static extern IntPtr btSoftBody_Anchor_new();
		[DllImport(Native.Dll, CallingConvention = Native.Conv), SuppressUnmanagedCodeSecurity]
		static extern IntPtr btSoftBody_Anchor_getBody(IntPtr obj);
		[DllImport(Native.Dll, CallingConvention = Native.Conv), SuppressUnmanagedCodeSecurity]
		static extern void btSoftBody_Anchor_getC0(IntPtr obj);
		[DllImport(Native.Dll, CallingConvention = Native.Conv), SuppressUnmanagedCodeSecurity]
		static extern void btSoftBody_Anchor_getC1(IntPtr obj);
		[DllImport(Native.Dll, CallingConvention = Native.Conv), SuppressUnmanagedCodeSecurity]
		static extern float btSoftBody_Anchor_getC2(IntPtr obj);
		[DllImport(Native.Dll, CallingConvention = Native.Conv), SuppressUnmanagedCodeSecurity]
		static extern float btSoftBody_Anchor_getInfluence(IntPtr obj);
		[DllImport(Native.Dll, CallingConvention = Native.Conv), SuppressUnmanagedCodeSecurity]
		static extern void btSoftBody_Anchor_getLocal(IntPtr obj);
		[DllImport(Native.Dll, CallingConvention = Native.Conv), SuppressUnmanagedCodeSecurity]
		static extern IntPtr btSoftBody_Anchor_getNode(IntPtr obj);
		[DllImport(Native.Dll, CallingConvention = Native.Conv), SuppressUnmanagedCodeSecurity]
		static extern void btSoftBody_Anchor_setBody(IntPtr obj, IntPtr value);
		[DllImport(Native.Dll, CallingConvention = Native.Conv), SuppressUnmanagedCodeSecurity]
		static extern void btSoftBody_Anchor_setC0(IntPtr obj, [In] ref Matrix value);
		[DllImport(Native.Dll, CallingConvention = Native.Conv), SuppressUnmanagedCodeSecurity]
        static extern void btSoftBody_Anchor_setC1(IntPtr obj, [In] ref Vector3 value);
		[DllImport(Native.Dll, CallingConvention = Native.Conv), SuppressUnmanagedCodeSecurity]
		static extern void btSoftBody_Anchor_setC2(IntPtr obj, float value);
		[DllImport(Native.Dll, CallingConvention = Native.Conv), SuppressUnmanagedCodeSecurity]
		static extern void btSoftBody_Anchor_setInfluence(IntPtr obj, float value);
		[DllImport(Native.Dll, CallingConvention = Native.Conv), SuppressUnmanagedCodeSecurity]
		static extern void btSoftBody_Anchor_setLocal(IntPtr obj, Vector3 value);
		[DllImport(Native.Dll, CallingConvention = Native.Conv), SuppressUnmanagedCodeSecurity]
		static extern void btSoftBody_Anchor_setNode(IntPtr obj, IntPtr value);
		[DllImport(Native.Dll, CallingConvention = Native.Conv), SuppressUnmanagedCodeSecurity]
		static extern void btSoftBody_Anchor_delete(IntPtr obj);
	}

	public class Note : Element
	{
		internal Note(IntPtr native)
			: base(native)
		{
		}

		public Note()
			: base(btSoftBody_Note_new())
		{
		}
        /*
		public float Coords
		{
			get { return btSoftBody_Note_getCoords(_native); }
			set { btSoftBody_Note_setCoords(_native, value._native); }
		}
        */
		public Node Nodes
		{
			get { return new Node(btSoftBody_Note_getNodes(_native)); }
			set { btSoftBody_Note_setNodes(_native, value._native); }
		}
        /*
		public void Offset
		{
			get { return btSoftBody_Note_getOffset(_native); }
			set { btSoftBody_Note_setOffset(_native, value._native); }
		}
        */
		public int Rank
		{
			get { return btSoftBody_Note_getRank(_native); }
			set { btSoftBody_Note_setRank(_native, value); }
		}

		public string Text
		{
			get { return btSoftBody_Note_getText(_native); }
			set { btSoftBody_Note_setText(_native, value); }
		}
